remove fixed scrollbars from html

--- a/app/styles/shame.scss
+++ b/app/styles/shame.scss
@@ -166,3 +166,8 @@ input.input-field {
   font-weight: 300;
   font-size: 1.4rem;
 }
+
+// Disable fixed scrollbars on html element > @TODO: port to appuniversum
+html {
+  overflow-y: auto;
+}
